force-app/main/default/objects/AcctPlanDepositInternational__c/AcctPlanDepositInternational__c.object-meta.xml
<CustomObject>
    <label>AccountPlanDepositInternational</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Deposit International Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountPlanDepositInternational</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>