force-app/main/default/objects/AcctPlanDepositInternational__c/fields/AccountPlanDepositInternationalDeposit__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanDepositInternationalDeposit__c</fullName>
    <label>AccountPlanDepositInternationalDeposit</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>AccountPlanDepositInternational</relationshipLabel>
    <relationshipName>AccountPlanDepositInternational</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>