force-app/main/default/objects/AcctPlanDepositInternational__c/fields/AmountBank1__c.field-meta.xml
<CustomField>
    <fullName>AmountBank1__c</fullName>
    <description>Deposit Amount - Bank 1 (Thai baht equivalent)</description>
    <inlineHelpText>Deposit Amount - Bank 1 (Thai baht equivalent)</inlineHelpText>
    <label>Amount (THB)-[Bank1]</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>