force-app/main/default/objects/AcctPlanDepositInternational__c/fields/AmountBank2__c.field-meta.xml
<CustomField>
    <fullName>AmountBank2__c</fullName>
    <description>Deposit Amount - Bank 2 (Thai baht equivalent)</description>
    <inlineHelpText>Deposit Amount - Bank 2 (Thai baht equivalent)</inlineHelpText>
    <label>Amount (THB)-[Bank2]</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>