force-app/main/default/objects/AcctPlanDepositInternational__c/fields/AmountBank3__c.field-meta.xml
<CustomField>
    <fullName>AmountBank3__c</fullName>
    <description>Deposit Amount - Bank 3 (Thai baht equivalent)</description>
    <inlineHelpText>Deposit Amount - Bank 3 (Thai baht equivalent)</inlineHelpText>
    <label>Amount (THB)-[Bank3]</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>