force-app/main/default/objects/AcctPlanDepositInternational__c/fields/AmtPerMonth__c.field-meta.xml
<CustomField>
    <fullName>AmtPerMonth__c</fullName>
    <description>Amount / Month : Amount ตาม THB equivalent</description>
    <inlineHelpText>Amount / Month : Amount ตาม THB equivalent</inlineHelpText>
    <label>Amount / Month (THB equivalent)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>