force-app/main/default/objects/AcctPlanDepositInternational__c/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currency</description>
    <inlineHelpText>Currency</inlineHelpText>
    <label>CCY</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>AccountPlanDepositInternational</relationshipLabel>
    <relationshipName>AccountPlanDepositInternational</relationshipName>
    <type>Lookup</type>
</CustomField>