force-app/main/default/objects/AcctPlanDepositInternational__c/fields/Label_Value__c.field-meta.xml
<CustomField>
    <fullName>Label_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label_Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>