force-app/main/default/objects/AcctPlanDepositInternational__c/fields/RateBank1__c.field-meta.xml
<CustomField>
    <fullName>RateBank1__c</fullName>
    <description>Interest Rate - Bank 1</description>
    <inlineHelpText>Interest Rate - Bank 1</inlineHelpText>
    <label>Rate(%)-[Bank1]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>