force-app/main/default/objects/AcctPlanDepositInternational__c/fields/RateBank2__c.field-meta.xml
<CustomField>
    <fullName>RateBank2__c</fullName>
    <description>Interest Rate - Bank 2</description>
    <inlineHelpText>Interest Rate - Bank 2</inlineHelpText>
    <label>Rate(%)-[Bank2]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>