force-app/main/default/objects/AcctPlanDepositInternational__c/fields/SharePercentBank2__c.field-meta.xml
<CustomField>
    <fullName>SharePercentBank2__c</fullName>
    <description>%share-Bank2</description>
    <inlineHelpText>%share-Bank2</inlineHelpText>
    <label>%share-[Bank2]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>