force-app/main/default/objects/AcctPlanDepositInternational__c/fields/SharePercentBank3__c.field-meta.xml
<CustomField>
    <fullName>SharePercentBank3__c</fullName>
    <description>%share-Bank3</description>
    <inlineHelpText>%share-Bank3</inlineHelpText>
    <label>%share-[Bank3]</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>