force-app/main/default/objects/AcctPlanDepositInternational__c/fields/TenorPerPeriod__c.field-meta.xml
<CustomField>
    <fullName>TenorPerPeriod__c</fullName>
    <description>Tenor / Period (Days)</description>
    <inlineHelpText>Tenor / Period (Days)</inlineHelpText>
    <label>Tenor / Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>