force-app/main/default/objects/AcctPlanDepositInternational__c/fields/TMBAmount__c.field-meta.xml
<CustomField>
    <fullName>TMBAmount__c</fullName>
    <description>Deposit Amount - TMB  (Thai baht equivalent)</description>
    <inlineHelpText>Deposit Amount - TMB  (Thai baht equivalent)</inlineHelpText>
    <label>Amount (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>